[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/sounds/death.wav" type="AudioStream" id=1]
[ext_resource path="res://assets/sounds/big_jump.ogg" type="AudioStream" id=2]
[ext_resource path="res://assets/sounds/brick_smash.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/coin.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/bump.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/invincible.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/stage_clear.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/pipe.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds/up.ogg" type="AudioStream" id=9]
[ext_resource path="res://assets/sounds/powerup.ogg" type="AudioStream" id=10]
[ext_resource path="res://assets/sounds/small_jump.ogg" type="AudioStream" id=11]
[ext_resource path="res://assets/sounds/underworld.ogg" type="AudioStream" id=12]
[ext_resource path="res://assets/sounds/main_theme.ogg" type="AudioStream" id=13]
[ext_resource path="res://assets/sounds/kick.ogg" type="AudioStream" id=14]
[ext_resource path="res://assets/sounds/powerup_appears.ogg" type="AudioStream" id=15]
[ext_resource path="res://assets/sounds/stomp.ogg" type="AudioStream" id=16]
[ext_resource path="res://assets/sounds/flagpole.wav" type="AudioStream" id=17]
[ext_resource path="res://src/SoundLibrary.gd" type="Script" id=18]
[ext_resource path="res://assets/sounds/fire.ogg" type="AudioStream" id=19]

[node name="Node" type="Node"]
script = ExtResource( 18 )

[node name="BIG_JUMP" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="BRICK_SMASH" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="BUMP" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="COIN" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="DEATH" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="FLAGPOLE" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )

[node name="INVINCIBLE" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="KICK" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="MAIN_THEME" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="PIPE" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="POWERUP" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="POWERUP_APPEARS" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[node name="SMALL_JUMP" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="STAGE_CLEAR" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="STOMP" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="UNDERWORLD" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="UP" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="FIRE" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
